k8s/auth-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-app-service
spec:
  selector:
    app: auth-app
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-app-deployment
  labels:
    app: auth-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-app
  template:
    metadata:
      labels:
        app: auth-app
    spec:
      containers:
      - name: auth-app-node-container
        imagePullPolicy: Never # MUST BE REMOVED IN PRODUCTION
        image: aws-ar-auth:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
        volumeMounts:
           - name: access-token-secrets 
             mountPath: /etc/secret-volume/jwts/access-tokens
           - name: refresh-token-secrets 
             mountPath: /etc/secret-volume/jwts/refresh-tokens
      volumes:
        - name: access-token-secrets
          secret:
            secretName: access-token-secrets
        - name: refresh-token-secrets
          secret:
            secretName: refresh-token-secrets
