k8s/auth-depl.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-app-service
spec:
  selector:
    app: auth-app
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-app-deployment
  labels:
    app: auth-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-app
  template:
    metadata:
      labels:
        app: auth-app
    spec:
      containers:
      - name: auth-app-node-container
        image: michaelfortunato/ar:AR-Auth-Service
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
        volumeMounts:
           - name: secret-volume
             mountPath: /etc/secret-volume
      volumes:
        - name: secret-volume
          secret:
            secretName: auth-secrets
