k8s/Ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: art-flex-ingress 
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: mongo-express-service 
              servicePort: 8081
          - path: /api/auth
            backend:
              serviceName: auth-app-service
              servicePort: 8080
